<resources>
    <string name="app_name">Afeme</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="rc_subway_street_district_city">RC, subway, street, district, city</string>
    <string name="apartments_from">Apartments from</string>
    <string name="gmaps_api_key">AIzaSyAUpTMk6vOvObIHvXKG9WBfwpPnYOqpQuA</string>
    <string name="call">Call</string>
    <string name="map">Map</string>
    <string name="services">Services</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="sorting">Sorting:</string>
    <string name="offers">Offers</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="edit">Edit</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="we_find_and_check_tenants">We find and check tenants</string>
    <string name="and_we_will_also_insure_the_apartment_and_help_in_everyday_life">And we will also insure the apartment and help in everyday life.</string>
    <string name="all_this_is_free">All this is — free.</string>
    <string name="thanks_next_time">Thanks, next time</string>
    <string name="i_want_to_know_more">I want to know more</string>
    <string name="share">Share</string>
    <string name="write_a_note">Write a note</string>
    <string name="complain_about_the_ad">Complain about the ad</string>
    <string name="hide_ad">Hide ad</string>
    <string name="actions">Actions</string>
    <string name="layout">Layout</string>
    <string name="watching_the_price">Watching the price</string>
    <string name="appointment">Appointment</string>
    <string name="location">Location</string>
    <string name="deal_terms">Deal terms</string>
    <string name="about_the_object">About the object</string>
    <string name="equipment">Equipment</string>
    <string name="place_an_ad">Place an ad</string>
    <string name="on_afeme">on Afeme</string>
    <string name="apartment_floor">Apartment floor</string>
    <string name="floors_in_the_house">Floors in the house</string>
    <string name="price_and_terms_of_the_deal">Price and terms of the deal</string>
    <string name="description">Description</string>
    <string name="choose_photo">Choose photo</string>
    <string name="preview">Preview</string>
    <string name="about_the_apartment">About the apartment</string>
    <string name="about_the_house">About the house</string>
    <string name="built_year">Built year</string>
    <string name="building_material">Building material</string>
    <string name="living_space">Living space</string>
    <string name="kitchen_area">Kitchen area</string>
    <string name="total_area">Total area</string>
    <string name="select_property_type">Select property type</string>
    <string name="floor">Floor</string>
    <string name="photos">Photos</string>
    <string name="maximum_15_photos">Maximum 15 photos</string>
    <string name="take_a_picture_of_all_the_rooms_the_kitchen_the_bathroom_the_corridor_the_balcony_the_view_from_the_window_the_facade_of_the_building_the_entrance_don_t_use_screenshots">Take a picture of all the rooms, kitchen, bathroom, corridor, balcony, view from the window, facade of the building, entrance. Don\'t use screenshots.</string>
    <string name="create_post">Create post</string>
    <string name="price">Price</string>
    <string name="how_many_rooms_in_the_properity">How many rooms in the properity?</string>
    <string name="rooms">Rooms</string>
    <string name="publish">Publish</string>
    <string name="publish_later">Publish later</string>
    <string name="room">Room</string>
    <string name="amenities_and_details">Amenities and Details</string>
    <string name="communication_method">Communication method</string>
    <string name="area">Area</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="messages">Messages</string>
    <string name="call_history">Call History</string>
    <string name="confirm">Confirm</string>
    <string name="cancle">Cancle</string>
    <string name="view_more">View More</string>
    <string name="notifications">Notifications</string>
    <string name="new_listings_on_subscriptions">New listings on subscriptions</string>
    <string name="related_searches">Related searches</string>
    <string name="display">Display</string>
    <string name="application_theme">Application theme</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="normal">Normal</string>
    <string name="map_style">Map style</string>
    <string name="additionally">Additionally</string>
    <string name="clear_cache">Clear cache</string>
    <string name="about_the_application">About the application</string>
    <string name="add_listings_to_favorites">Add listings to favorites</string>
    <string name="do_not_miss_price_changes_of_interesting_offers">Do not miss price changes of interesting offers</string>
    <string name="by_relevance">By relevance</string>
    <string name="no_subscriptions_yet">No subscriptions yet</string>
    <string name="subscribe_to_the_search_that_interests_you_so_as_not_to_miss_new_announcements">Subscribe to the search that interests you, so as not to miss new announcements</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="_998">+998</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_sign_in"><font color='#949AA1'>Already have an account?</font><font color='#2972FE'>  Sign in</font></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_sign_up"><font color='#949AA1'>Don\'t have an account?</font><font color='#2972FE'>  Sign up</font></string>
    <string name="creating_post">Creating post</string>
    <string name="you_started_filling_out_post_but_were_interrupted_do_you_want_to_continue">You started filling out post, but were interrupted. Do you want to continue?</string>
    <string name="continue_filling">Continue filling</string>
    <string name="start_again">Start again</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
</resources>