<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/nav_search_selector"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/nav_favorites_selector"
        android:title="@string/favorites" />
    <item
        android:icon="@drawable/nav_favorites_selector"
        android:id="@+id/nav_services"
        android:title="@string/services" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/nav_chat_selector"
        android:title="@string/chat" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/nav_profile_selector"
        android:title="@string/profile" />

</menu>