<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IntroActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/intro_home_image" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#51000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/generalsans_semibold"
            android:text="@string/we_find_and_check_tenants"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/generalsans_medium"
            android:text="@string/and_we_will_also_insure_the_apartment_and_help_in_everyday_life"
            android:textColor="@color/white"
            android:textSize="22sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/generalsans_medium"
            android:text="@string/all_this_is_free"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/item_enabled_background"
            android:fontFamily="@font/generalsans_medium"
            android:text="@string/i_want_to_know_more"
            android:textAllCaps="false"
            android:textColor="@color/very_dark_gray_mostly_black"
            android:textSize="18sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginEnd="3dp"
            android:background="@drawable/item_transparent_white_solid_background"
            android:fontFamily="@font/generalsans_medium"
            android:text="@string/thanks_next_time"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</RelativeLayout>